Make tweets always reload after submission. Fix navbar on mobile. Center 'tweeter' and remove 'write new tweet' for very small screens

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  position: absolute;
+  position: fixed;
 
   display: flex;
   align-items: center;
@@ -9,6 +9,9 @@ nav {
   box-sizing: border-box;
   height: 120px;
   padding: 0 1.5em;
+
+  background-color: coral;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 
   color: #FFFFFF;
 }
